resources/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: global-gateway
    namespace: global-gateway
    sectionName: argocd-tls-gw
  rules:
    - backendRefs:
      - name: argocd-server
        port: 443
